src/objects/ZV_GamePlayer__c.object
<CustomObject>
    <fields>
        <fullName>Game__c</fullName>
        <label>Game</label>
        <referenceTo>ZV_Game__c</referenceTo>
        <relationshipLabel>Game Players</relationshipLabel>
        <relationshipName>Game_Players</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PlayOrderKey__c</fullName>
        <label>Play Order Key</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PlayOrder__c</fullName>
        <label>Play Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Player__c</fullName>
        <label>Player</label>
        <referenceTo>ZV_Player__c</referenceTo>
        <relationshipLabel>Game Players</relationshipLabel>
        <relationshipName>Game_Players</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Game Player</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Game__c</columns>
        <columns>Player__c</columns>
        <columns>PlayOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ZVGP-{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>Game Player Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Players</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>